--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "istanbul": "^0.4.4",
     "joi": "^8.4.2",
     "mocha": "^2.5.3",
+    "form-data": "^2.0.0",
     "typescript": "^1.8.7",
     "typings": "^1.3.0"
   },
