--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "configure": "npm install; typings install --global;",
     "configurewin": "npm install & typings install --global",
     "build": "tsc",
-    "test": "mocha -c -R mochawesome",
+    "test": "mocha -c -R mochawesome --timeout 30000",
     "cover": "istanbul cover _mocha",
     "coverwin": "istanbul cover node_modules/mocha/bin/_mocha",
     "start": "node src/App.js"
