--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "jszip": "^3.1.2",
     "mochawesome": "^1.5.2",
+    "parse5": "^2.2.3",
     "restify": "^4.0.3",
     "tslint": "^3.15.1",
     "typescript": "^1.8.10"
